cabal-version:       >=1.10

name:                mirror
version:             0.1.0.0
build-type:          Simple

executable mirror
  main-is:             Main.hs
  other-modules:       App.Types
                     , App.Options
  build-depends:       base >=4.14 && <4.15
                     , time
                     , cassava
                     , bytestring
                     , containers
                     , optparse-applicative
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
